--- a/nav_exer/.gitignore
+++ b/nav_exer/.gitignore
@@ -1,23 +1,53 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Global Ignore Rules
+# Ignore node_modules in all subdirectories
+**/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Ignore package manager lock files
+**/package-lock.json
+**/yarn.lock
 
-# testing
-/coverage
+# Ignore build artifacts
+**/build/
+**/dist/
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Ignore logs
+**/logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore cache files
+**/.cache/
+**/.pnp/
+**/.pnp.js
+
+# Ignore environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Ignore miscellaneous system files
+.DS_Store
+Thumbs.db
+
+# Ignore IDE files
+.idea/
+.vscode/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Optional REPL history
+.node_repl_history
+
+# Output of `npm pack`
+*.tgz
+
+# Dependency directories
+jspm_packages/
+
+
