--- a/nav_exer/package.json
+++ b/nav_exer/package.json
@@ -7,12 +7,25 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@mui/x-charts": "^7.23.6",
+    "@mui/x-date-pickers": "^7.23.6",
+    "@mui/x-date-pickers-pro": "^7.23.6",
+    "apexcharts": "^4.3.0",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-annotation": "^3.1.0",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
     "mui": "^0.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.3.1",
+    "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.62",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
