--- a/nav_exer/package.json
+++ b/nav_exer/package.json
@@ -6,7 +6,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.3.1",
+    "@mui/material": "^6.4.3",
     "@mui/x-charts": "^7.23.6",
     "@mui/x-date-pickers": "^7.23.6",
     "@mui/x-date-pickers-pro": "^7.23.6",
@@ -22,10 +22,12 @@
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-gauge-component": "^1.2.62",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "swiper": "^11.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +52,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3"
   }
 }
